--- a/.classpath
+++ b/.classpath
@@ -8,6 +8,8 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/vtm"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/vtm-gdx"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/vtm-gdx-desktop"/>
-	<classpathentry kind="lib" path="libs/osmscout-natives.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/osmscout-natives.jar"/>
+	<classpathentry kind="lib" path="/vtm-libs/libs/slf4j-api-1.7.5.jar"/>
+	<classpathentry kind="lib" path="/vtm-libs/libs/slf4j-simple-1.7.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
