--- a/jni/build.xml
+++ b/jni/build.xml
@@ -1,17 +1,19 @@
 <project name="osmscout-natives" basedir="." default="all">
 	<target name="clean">
+		<ant antfile="build-android32.xml" target="clean"/>
 		<ant antfile="build-linux64.xml" target="clean"/>
 
 	</target>
 	
 	<target name="compile-natives">
+		<ant antfile="build-android32.xml"/>
 		<ant antfile="build-linux64.xml"/>
 
 	</target>
 	
 	<target name="pack-natives">
 		<jar destfile="../libs/osmscout-natives.jar">
-			<fileset dir="../libs/linux64" includes="libosmscout64.so"/>
+			<fileset dir="../libs/linux64" includes="libosmscout.so"/>
 
 		</jar>
 	</target>
