--- a/.project
+++ b/.project
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>vtm-osmscout</name>
-	<comment></comment>
-	<projects>
-	</projects>
-	<buildSpec>
+  <name>vtm-android-osmscout</name>
+  <comment></comment>
+  <projects>
+  </projects>
+  <buildSpec>
+
 		<buildCommand>
-			<name>org.eclipse.wst.common.project.facet.core.builder</name>
+			<name>com.android.ide.eclipse.adt.ResourceManagerBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>com.android.ide.eclipse.adt.PreCompilerBuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
@@ -15,9 +21,14 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>com.android.ide.eclipse.adt.ApkBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
-	<natures>
-		<nature>org.eclipse.jdt.core.javanature</nature>
-		<nature>org.eclipse.wst.common.project.facet.core.nature</nature>
-	</natures>
+  <natures>
+    <nature>com.android.ide.eclipse.adt.AndroidNature</nature>
+    <nature>org.eclipse.jdt.core.javanature</nature>
+  </natures>
 </projectDescription>
