--- a/jni/.cproject
+++ b/jni/.cproject
@@ -43,7 +43,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="libosmscout/libosmscout-map-agg/|libosmscout/.git/|libosmscout/Android/|libosmscout/Apple/|libosmscout/berlin/|libosmscout/berlin2/|libosmscout/Demos/|libosmscout/Documentation/|libosmscout/DumpData/|libosmscout/Import/|libosmscout/libosmscout-import/|libosmscout/libosmscout-map-cairo/|libosmscout/libosmscout-map-iOSX/|libosmscout/libosmscout-map-opengl/|libosmscout/libosmscout-map-qt/|libosmscout/libosmscout-map-svg/|libosmscout/map/|libosmscout/map-test/|libosmscout/OSMScout/|libosmscout/Tests/|libosmscout/TravelJinni/|libosmscout/windows/|target/**" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
+						<entry excluding="libosmscout/libosmscout-import/|libosmscout/.git/|libosmscout/map/|libosmscout/libosmscout-map-iOSX/|libosmscout/Apple/|libosmscout/TravelJinni/|libosmscout/libosmscout-map-cairo/|target/**|libosmscout/libosmscout-map-svg/|libosmscout/libosmscout-map-qt/|libosmscout/Tests/|libosmscout/OSMScout/|libosmscout/DumpData/|libosmscout/berlin2/|libosmscout/Demos/|libosmscout/libosmscout-map-opengl/|libosmscout/Documentation/|libosmscout/Import/|libosmscout/map-test/|libosmscout/berlin/|libosmscout/Android/|libosmscout/libosmscout-map-agg/|libosmscout/windows/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
