--- a/android/.project
+++ b/android/.project
@@ -37,14 +37,29 @@
 			<locationURI>PARENT-2-PROJECT_LOC/vtm/assets</locationURI>
 		</link>
 		<link>
-			<name>libs/armeabi</name>
+			<name>libs</name>
 			<type>2</type>
-			<locationURI>$%7BPARENT-1-PROJECT_LOC%7D/libs/armeabi</locationURI>
-		</link>
-		<link>
-			<name>libs/armeabi-v7a</name>
-			<type>2</type>
-			<locationURI>$%7BPARENT-1-PROJECT_LOC%7D/libs/armeabi-v7a</locationURI>
+			<locationURI>$%7BPARENT-1-PROJECT_LOC%7D/libs</locationURI>
 		</link>
 	</linkedResources>
+	<filteredResources>
+		<filter>
+			<id>1385866583515</id>
+			<name>libs</name>
+			<type>9</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-armeabi*</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1385866583562</id>
+			<name>libs</name>
+			<type>6</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-osmscout-natives.jar</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
