--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -4,16 +4,15 @@
     android:versionName="1.0" >
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+ <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-sdk
         android:minSdkVersion="10"
-        android:targetSdkVersion="15" />
+        android:targetSdkVersion="19" />
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-         android:debuggable="true">
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         <activity
             android:name="org.oscim.osmscout.MapActivity"
             android:label="@string/title_activity_map" >
