--- a/desktop/.classpath
+++ b/desktop/.classpath
@@ -2,10 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/vtm-gdx-desktop"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/vtm"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/vtm-gdx"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/vtm-osmscout"/>
-	<classpathentry kind="lib" path="/vtm-osmscout/libs/osmscout-natives.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/vtm-desktop"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/vtm-themes"/>
+	<classpathentry kind="lib" path="/home/jeff/dev/vtm/vtm-osmscout/libs/osmscout-natives.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
