--- a/jni/.cproject
+++ b/jni/.cproject
@@ -5,12 +5,12 @@
 			<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="cdt.managedbuild.toolchain.gnu.base.1383083023" moduleId="org.eclipse.cdt.core.settings" name="Default">
 				<externalSettings/>
 				<extensions>
-					<extension id="org.eclipse.cdt.core.ELF" point="org.eclipse.cdt.core.BinaryParser"/>
 					<extension id="org.eclipse.cdt.core.GmakeErrorParser" point="org.eclipse.cdt.core.ErrorParser"/>
 					<extension id="org.eclipse.cdt.core.CWDLocator" point="org.eclipse.cdt.core.ErrorParser"/>
 					<extension id="org.eclipse.cdt.core.GCCErrorParser" point="org.eclipse.cdt.core.ErrorParser"/>
 					<extension id="org.eclipse.cdt.core.GASErrorParser" point="org.eclipse.cdt.core.ErrorParser"/>
 					<extension id="org.eclipse.cdt.core.GLDErrorParser" point="org.eclipse.cdt.core.ErrorParser"/>
+					<extension id="org.eclipse.cdt.core.ELF" point="org.eclipse.cdt.core.BinaryParser"/>
 				</extensions>
 			</storageModule>
 			<storageModule moduleId="cdtBuildSystem" version="4.0.0">
@@ -24,10 +24,15 @@
 								<option id="gnu.cpp.compiler.option.include.paths.1589512341" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/vtm-osmscout-jni/libosmscout/libosmscout/include}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/vtm-osmscout-jni/libosmscout/libosmscout-map/include}&quot;"/>
+									<listOptionValue builtIn="false" value="/usr/lib/jvm/java-7-openjdk-amd64/include"/>
+									<listOptionValue builtIn="false" value="/vtm-osmscout-jni/libosmscout/libosmscout-import/include"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.1878653291" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.compiler.base.196514160" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.base">
+								<option id="gnu.c.compiler.option.include.paths.286881303" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" valueType="includePath">
+									<listOptionValue builtIn="false" value="/usr/lib/jvm/java-7-openjdk-amd64/include"/>
+								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.101305487" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.linker.base.232000965" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.base"/>
@@ -43,7 +48,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="libosmscout/libosmscout-map-agg/|libosmscout/.git/|libosmscout/Android/|libosmscout/Apple/|libosmscout/berlin/|libosmscout/berlin2/|libosmscout/Demos/|libosmscout/Documentation/|libosmscout/DumpData/|libosmscout/Import/|libosmscout/libosmscout-import/|libosmscout/libosmscout-map-cairo/|libosmscout/libosmscout-map-iOSX/|libosmscout/libosmscout-map-opengl/|libosmscout/libosmscout-map-qt/|libosmscout/libosmscout-map-svg/|libosmscout/map/|libosmscout/map-test/|libosmscout/OSMScout/|libosmscout/Tests/|libosmscout/TravelJinni/|libosmscout/windows/|target/**" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
+						<entry excluding="libosmscout/libosmscout-map-agg/|libosmscout/.git/|libosmscout/Android/|libosmscout/Apple/|libosmscout/berlin/|libosmscout/berlin2/|libosmscout/Demos/|libosmscout/Documentation/|libosmscout/DumpData/|libosmscout/Import/|libosmscout/libosmscout-map-cairo/|libosmscout/libosmscout-map-iOSX/|libosmscout/libosmscout-map-opengl/|libosmscout/libosmscout-map-qt/|libosmscout/libosmscout-map-svg/|libosmscout/map/|libosmscout/map-test/|libosmscout/OSMScout/|libosmscout/Tests/|libosmscout/TravelJinni/|libosmscout/windows/|target/**" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
